--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,5 +1,5 @@
 <span *ngIf="product">
   {{product.name}}|{{product.price}}|{{product.description}}
-  <button (click)="requestDelete()">Delete</button>
+  <button class="btn btn-primary"(click)="requestDelete()">Delete</button>
 </span>
 
